libs/@local/hashql/ast/tests/ui/lowering/import-resolver/item-not-found.jsonc
//@ run: fail
//@ description: Tests that importing a non-existent item produces an appropriate error with suggestions
["use", "math", { "#tuple": ["lshift"] }, "_"]
//~^ ERROR 'lshift' not found in module 'math'
